// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defaultDehydrateEntity should dehydrate for insert — skip increments only 1`] = `
{
  "created_at": 2024-01-01T00:00:00.000Z,
  "email_address": "alice@example.com",
  "id": "abc-123",
  "name": "Alice",
  "readonly_field": "immutable",
  "updated_at": 2024-01-02T00:00:00.000Z,
  "version": 1,
}
`;

exports[`defaultDehydrateEntity should dehydrate for update — skip PKs, CreateDate, readonly, increments 1`] = `
{
  "email_address": "alice@example.com",
  "name": "Alice",
  "updated_at": 2024-01-02T00:00:00.000Z,
  "version": 1,
}
`;

exports[`defaultDehydrateEntity — embedded fields should flatten embedded object into prefixed column names 1`] = `
{
  "homeAddress_city": "Springfield",
  "homeAddress_street": "123 Main St",
  "homeAddress_zip": "62704",
  "id": "abc",
}
`;
